Add some logging to `CrossClusterIT#testCancel()`